kubernetes-practice/kubernetes/info-development.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-deployment
  labels:
    app: info
spec:
  replicas: 3
  selector:
    matchLabels:
      app: info
  template:
    metadata:
      labels:
        app: info
    spec:
      containers:
      - name: info
        image: mytyan/info:0.0.2
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: info-service
spec:
  selector:
    app: info
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
