kubernetes-practice/kubernetes/speaker-development.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: speaker-deployment
  labels:
    app: speaker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: speaker
  template:
    metadata:
      labels:
        app: speaker
    spec:
      containers:
      - name: speaker
        image: mytyan/speaker:0.0.2
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: speaker-service
spec:
  selector:
    app: speaker
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
