kubernetes-practice/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"  
spec:
  tls:
    - hosts:
        - biognom.ru
      secretName: letsencrypt
  rules:
    - host: biognom.ru
      http:
        paths:
          - path: /speaker-api
            pathType: Prefix
            backend:
              service:
                name: speaker-service
                port:
                  number: 8080
